; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid.c_raid_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid.c_raid_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_target = type { %struct.raid_set* }
%struct.raid_set = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@MD_CHANGE_DEVS = common dso_local global i32 0, align 4
@MD_RECOVERY_FROZEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_target*)* @raid_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @raid_resume(%struct.dm_target* %0) #0 {
  %2 = alloca %struct.dm_target*, align 8
  %3 = alloca %struct.raid_set*, align 8
  store %struct.dm_target* %0, %struct.dm_target** %2, align 8
  %4 = load %struct.dm_target*, %struct.dm_target** %2, align 8
  %5 = getelementptr inbounds %struct.dm_target, %struct.dm_target* %4, i32 0, i32 0
  %6 = load %struct.raid_set*, %struct.raid_set** %5, align 8
  store %struct.raid_set* %6, %struct.raid_set** %3, align 8
  %7 = load i32, i32* @MD_CHANGE_DEVS, align 4
  %8 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %9 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = call i32 @set_bit(i32 %7, i32* %10)
  %12 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %13 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %1
  %17 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %18 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %17, i32 0, i32 1
  %19 = call i32 @bitmap_load(%struct.TYPE_3__* %18)
  %20 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %21 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  br label %25

22:                                               ; preds = %1
  %23 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %24 = call i32 @attempt_restore_of_faulty_devices(%struct.raid_set* %23)
  br label %25

25:                                               ; preds = %22, %16
  %26 = load i32, i32* @MD_RECOVERY_FROZEN, align 4
  %27 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %28 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = call i32 @clear_bit(i32 %26, i32* %29)
  %31 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %32 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %31, i32 0, i32 1
  %33 = call i32 @mddev_resume(%struct.TYPE_3__* %32)
  ret void
}

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @bitmap_load(%struct.TYPE_3__*) #1

declare dso_local i32 @attempt_restore_of_faulty_devices(%struct.raid_set*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @mddev_resume(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
